Update the embedding provider from ollama to openai embedding model.
Before you use, please may sure the tags table in you db has a field named embedding(dimensions : 1536).
You can just delete the exists tags table with : 'DROP TABLE tags CASADE;",
and delete the recipes table with :"DROP TABLE recipes CASADE;" if needed.

And RE-Create the 2 tables : CREATE TABLE recipes ( id SERIAL PRIMARY KEY, name VARCHAR(255) NOT NULL, ingredients TEXT NOT NULL, instructions TEXT NOT NULL, picture VARCHAR(255), authorid INT REFERENCES Users(id) );
CREATE TABLE tags ( id SERIAL PRIMARY KEY, title VARCHAR(100) NOT NULL UNIQUE, ingredients TEXT, description TEXT, embedding vector(1536) ); ' .